--- a/API/API.csproj
+++ b/API/API.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Mapping\" />
+  </ItemGroup>
+
 </Project>
