--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,4 +1,13 @@
 services:
+  client:
+    build:
+      context: ./client
+      dockerfile: dev.Dockerfile
+    depends_on:
+      - server
+    ports:
+      - 7002:7002
+
   server:
     build:
       context: ./API
