--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -7,6 +7,9 @@ services:
       - server
     ports:
       - 7002:7002
+    volumes:
+      - ./client:/app
+      - /app/node_modules
 
   server:
     build:
