Create loading skeletons for Rooms list and Room page

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.6",
     "vitest": "^1.6.0"
