--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://alpineluxurysuites.com",
   "scripts": {
     "dev": "vite --port 7002 --host",
     "build": "tsc -b && vite build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist --cname alpineluxurysuites.com",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
     "preview": "vite preview"
@@ -35,6 +38,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
