--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,8 @@
   "homepage": "https://alpineluxurysuites.com",
   "scripts": {
     "dev": "vite --port 7002 --host",
-    "build": "tsc -b && vite build",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist --cname alpineluxurysuites.com",
+    "build": "tsc -b && vite build --mode production",
+    "start": "npm run build && npx http-server ./dist -p 7002 --proxy http://localhost:7002?",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
     "preview": "vite preview"
@@ -20,6 +19,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slider": "^1.2.0",
     "date-fns": "^3.6.0",
+    "http-server": "^14.1.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -38,7 +38,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
