--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -49,6 +49,7 @@ server {
         proxy_redirect off;
         proxy_pass http://frontend:7002;
     }
+#   End of comment block
 
 
     location /api {
