--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite --port 7002 --host",
     "build": "tsc -b && vite build --mode production",
-    "start": "npm run build && npx http-server ./dist -p 7002 --proxy http://localhost:7002?",
+    "start": "npm run build && npx http-server ./dist -p 7002",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
     "preview": "vite preview"
